compiler/testData/diagnostics/tests/incompleteCode/senselessComparisonWithNull.kt
// !DIAGNOSTICS: -UNUSED_EXPRESSION
package d

fun foo(a : IntArray) {
    if (null == <!FUNCTION_EXPECTED!>a<!>()<!SYNTAX!><!>
<!SYNTAX!><!>}